// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`convertToModelMessages > assistant message > should handle assistant message with tool invocations 1`] = `
[
  {
    "content": [
      {
        "text": "Let me calculate that for you.",
        "type": "text",
      },
      {
        "input": {
          "numbers": [
            1,
            2,
          ],
          "operation": "add",
        },
        "toolCallId": "call1",
        "toolName": "calculator",
        "type": "tool-call",
      },
    ],
    "role": "assistant",
  },
  {
    "content": [
      {
        "output": "3",
        "toolCallId": "call1",
        "toolName": "calculator",
        "type": "tool-result",
      },
    ],
    "role": "tool",
  },
]
`;

exports[`convertToModelMessages > assistant message > should handle assistant message with tool invocations that have multi-part responses 1`] = `
[
  {
    "content": [
      {
        "text": "Let me calculate that for you.",
        "type": "text",
      },
      {
        "input": {},
        "toolCallId": "call1",
        "toolName": "screenshot",
        "type": "tool-call",
      },
    ],
    "role": "assistant",
  },
  {
    "content": [
      {
        "experimental_content": [
          {
            "data": "imgbase64",
            "type": "image",
          },
        ],
        "output": [
          {
            "data": "imgbase64",
            "type": "image",
          },
        ],
        "toolCallId": "call1",
        "toolName": "screenshot",
        "type": "tool-result",
      },
    ],
    "role": "tool",
  },
]
`;

exports[`convertToModelMessages > assistant message > should handle conversation with an assistant message that has empty tool invocations 1`] = `
[
  {
    "content": [
      {
        "text": "text1",
        "type": "text",
      },
    ],
    "role": "user",
  },
  {
    "content": [
      {
        "text": "text2",
        "type": "text",
      },
    ],
    "role": "assistant",
  },
]
`;

exports[`convertToModelMessages > assistant message > should handle conversation with mix of tool invocations and text 1`] = `
[
  {
    "content": [
      {
        "text": "i am gonna use tool1",
        "type": "text",
      },
      {
        "input": {
          "value": "value-1",
        },
        "toolCallId": "call-1",
        "toolName": "screenshot",
        "type": "tool-call",
      },
    ],
    "role": "assistant",
  },
  {
    "content": [
      {
        "output": "result-1",
        "toolCallId": "call-1",
        "toolName": "screenshot",
        "type": "tool-result",
      },
    ],
    "role": "tool",
  },
  {
    "content": [
      {
        "text": "i am gonna use tool2 and tool3",
        "type": "text",
      },
      {
        "input": {
          "value": "value-2",
        },
        "toolCallId": "call-2",
        "toolName": "screenshot",
        "type": "tool-call",
      },
      {
        "input": {
          "value": "value-3",
        },
        "toolCallId": "call-3",
        "toolName": "screenshot",
        "type": "tool-call",
      },
    ],
    "role": "assistant",
  },
  {
    "content": [
      {
        "output": "result-2",
        "toolCallId": "call-2",
        "toolName": "screenshot",
        "type": "tool-result",
      },
      {
        "output": "result-3",
        "toolCallId": "call-3",
        "toolName": "screenshot",
        "type": "tool-result",
      },
    ],
    "role": "tool",
  },
  {
    "content": [
      {
        "input": {
          "value": "value-4",
        },
        "toolCallId": "call-4",
        "toolName": "screenshot",
        "type": "tool-call",
      },
    ],
    "role": "assistant",
  },
  {
    "content": [
      {
        "output": "result-4",
        "toolCallId": "call-4",
        "toolName": "screenshot",
        "type": "tool-result",
      },
    ],
    "role": "tool",
  },
  {
    "content": [
      {
        "text": "final response",
        "type": "text",
      },
    ],
    "role": "assistant",
  },
]
`;

exports[`convertToModelMessages > assistant message > should handle conversation with multiple tool invocations that have step information 1`] = `
[
  {
    "content": [
      {
        "text": "response",
        "type": "text",
      },
      {
        "input": {
          "value": "value-1",
        },
        "toolCallId": "call-1",
        "toolName": "screenshot",
        "type": "tool-call",
      },
    ],
    "role": "assistant",
  },
  {
    "content": [
      {
        "output": "result-1",
        "toolCallId": "call-1",
        "toolName": "screenshot",
        "type": "tool-result",
      },
    ],
    "role": "tool",
  },
  {
    "content": [
      {
        "input": {
          "value": "value-2",
        },
        "toolCallId": "call-2",
        "toolName": "screenshot",
        "type": "tool-call",
      },
      {
        "input": {
          "value": "value-3",
        },
        "toolCallId": "call-3",
        "toolName": "screenshot",
        "type": "tool-call",
      },
    ],
    "role": "assistant",
  },
  {
    "content": [
      {
        "output": "result-2",
        "toolCallId": "call-2",
        "toolName": "screenshot",
        "type": "tool-result",
      },
      {
        "output": "result-3",
        "toolCallId": "call-3",
        "toolName": "screenshot",
        "type": "tool-result",
      },
    ],
    "role": "tool",
  },
  {
    "content": [
      {
        "input": {
          "value": "value-4",
        },
        "toolCallId": "call-4",
        "toolName": "screenshot",
        "type": "tool-call",
      },
    ],
    "role": "assistant",
  },
  {
    "content": [
      {
        "output": "result-4",
        "toolCallId": "call-4",
        "toolName": "screenshot",
        "type": "tool-result",
      },
    ],
    "role": "tool",
  },
]
`;

exports[`convertToModelMessages > multiple messages > should handle conversation with multiple tool invocations and user message at the end 1`] = `
[
  {
    "content": [
      {
        "input": {
          "value": "value-1",
        },
        "toolCallId": "call-1",
        "toolName": "screenshot",
        "type": "tool-call",
      },
    ],
    "role": "assistant",
  },
  {
    "content": [
      {
        "output": "result-1",
        "toolCallId": "call-1",
        "toolName": "screenshot",
        "type": "tool-result",
      },
    ],
    "role": "tool",
  },
  {
    "content": [
      {
        "input": {
          "value": "value-2",
        },
        "toolCallId": "call-2",
        "toolName": "screenshot",
        "type": "tool-call",
      },
      {
        "input": {
          "value": "value-3",
        },
        "toolCallId": "call-3",
        "toolName": "screenshot",
        "type": "tool-call",
      },
    ],
    "role": "assistant",
  },
  {
    "content": [
      {
        "output": "result-2",
        "toolCallId": "call-2",
        "toolName": "screenshot",
        "type": "tool-result",
      },
      {
        "output": "result-3",
        "toolCallId": "call-3",
        "toolName": "screenshot",
        "type": "tool-result",
      },
    ],
    "role": "tool",
  },
  {
    "content": [
      {
        "input": {
          "value": "value-4",
        },
        "toolCallId": "call-4",
        "toolName": "screenshot",
        "type": "tool-call",
      },
    ],
    "role": "assistant",
  },
  {
    "content": [
      {
        "output": "result-4",
        "toolCallId": "call-4",
        "toolName": "screenshot",
        "type": "tool-result",
      },
    ],
    "role": "tool",
  },
  {
    "content": [
      {
        "text": "response",
        "type": "text",
      },
    ],
    "role": "assistant",
  },
  {
    "content": [
      {
        "text": "Thanks!",
        "type": "text",
      },
    ],
    "role": "user",
  },
]
`;
